Complete migration to Supabase - clean repository

--- a/confirm-supabase.html
+++ b/confirm-supabase.html
@@ -92,7 +92,7 @@
                         <p style="font-size: 0.8rem; color: #666; margin-top: 1rem;">Redirecting to The Music Cave...</p>
                     `
                     setTimeout(() => {
-                        window.location.href = 'index-supabase.html'
+                        window.location.href = 'index.html'
                     }, 2000)
                 }
             })
